# VulkanEngine

./: CMakeLists.txt
Project/: CMakeLists.txt  Engine.cpp  Engine.h  RealEngine.cpp  RealEngine.h  main.cpp
Project/Archived/: VulkanBase.h
Project/Archived/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/Content/: ContentManager.cpp  ContentManager.h  Model.cpp  Model.h  Texture2D.cpp  Texture2D.h
Project/Core/: CommandPool.cpp  CommandPool.h  SwapChain.cpp  SwapChain.h
Project/Core/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.h
Project/Core/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.h  DepthBufferManager.cpp  DepthBufferManager.h
Project/Graphics/: PipelineManager.cpp  PipelineManager.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  VertexInput.cpp  VertexInput.h
Project/Graphics/Material/: Material.cpp  Material.h
Project/Graphics/Material/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.h
Project/Graphics/Material/Pipelines/: DefaultPipeline.cpp
Project/Graphics/Material/RenderPasses/: DefaultRenderPass.cpp  DefaultRenderPass.h
Project/ImGui/: imgui_impl_vulkan.h
Project/Material/: BaseMaterial.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h
Project/Material/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.h
Project/Material/Pipelines/: DefaultPipeline.cpp  DefaultPipeline.h  Pipeline.cpp  Pipeline.h  PosCol2DPipeline.cpp  PosCol2DPipeline.h  PosColNormPipeline.cpp  PosColNormPipeline.h  PosNormBase.h  PosTexNormPipeline.cpp  PosTexNormPipeline.h
Project/Material/RenderPasses/: DefaultRenderPass.cpp  RenderPass.cpp  RenderPass.h
Project/Mesh/: BaseMesh.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshIndexed.h  PrimitiveFactory.cpp  PrimitiveFactory.h
Project/Misc/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  InputManager.cpp  InputManager.h
Project/Resources/Shaders/: PosTexNorm.vert
Project/Scenes/: TestScene.cpp  TestScene.h
Project/Util/: Concepts.h  GameTime.cpp  GameTime.h  Logger.cpp  Logger.h  Singleton.h  Structs.h  VulkanUtil.cpp  VulkanUtil.h
Project/shaders/: PosColNorm.frag  shader.vert
Real3D/: CMakeLists.txt  RealEngine.cpp  RealEngine.h
Real3D/Content/: ContentManager.cpp  ContentManager.h  Model.cpp  Model.h  Texture2D.cpp  Texture2D.h
Real3D/Core/: CommandPool.cpp  CommandPool.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  SwapChain.cpp  SwapChain.h
Real3D/Core/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.h
Real3D/Core/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.h  DepthBufferManager.cpp  DepthBufferManager.h
Real3D/Graphics/: RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h
Real3D/ImGui/: imgui_impl_vulkan.cpp
Real3D/Material/: BaseMaterial.cpp  BaseMaterial.h  Material.h  MaterialManager.cpp  MaterialManager.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineEnums.h
Real3D/Material/Pipelines/: Pipeline.cpp  Pipeline.h  PosCol2DPipeline.cpp  PosCol2DPipeline.h  PosColNormPipeline.cpp  PosColNormPipeline.h  PosNormBase.cpp  PosNormBase.h  PosTexNormPipeline.cpp  PosTexNormPipeline.h
Real3D/Mesh/: BaseMesh.h  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshIndexed.cpp  MeshIndexed.h  PrimitiveFactory.cpp  PrimitiveFactory.h
Real3D/Misc/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  CameraInputManager.cpp  CameraInputManager.h  CameraManager.cpp  CameraManager.h
Real3D/Util/: Concepts.h  Structs.h  VulkanUtil.cpp  VulkanUtil.h  vk_mem_alloc.h
RealCore/: CMakeLists.txt
RealCore/real_core/: Audio.h  Colors.h  Command.cpp  Command.h  Component.cpp  Component.h  DrawableComponent.h  EngineBase.cpp  EngineBase.h  GameObject.cpp  GameObject.h  GamePad.cpp  GamePad.h  GameTime.cpp  GameTime.h  InputManager.cpp  InputManager.h  InputMap.cpp  InputMap.h  InputTypes.h  Locator.cpp  Locator.h  LogAudio.cpp  LogAudio.h  Logger.cpp  Logger.h  NullAudio.h  Observer.h  Prefab.cpp  Prefab.h  SDLAudio.cpp  SDLAudio.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Singleton.h  Subject.h  Transform.cpp  Transform.h  (+1 more)
RealMinecraft/: CMakeLists.txt  main.cpp
RealMinecraft/Commands/: InteractCommand.cpp  InteractCommand.h  MoveCommand.cpp  MoveCommand.h  RotateCommand.cpp  RotateCommand.h
RealMinecraft/Components/: Chunk.cpp  Chunk.h  Gui.cpp  Gui.h  OutlineBlock.cpp  OutlineBlock.h  Player.cpp  Player.h  TransparentModel.cpp  TransparentModel.h  World.cpp  World.h
RealMinecraft/Materials/: DiffuseMaterial.cpp  DiffuseMaterial.h  GuiMaterial.cpp  GuiMaterial.h  OutlineMaterial.cpp  OutlineMaterial.h  TransparentMaterial.cpp  TransparentMaterial.h  TranspriteMaterial.cpp  TranspriteMaterial.h  WaterMaterial.cpp  WaterMaterial.h
RealMinecraft/Pipelines/: GlassPipeline.cpp  GlassPipeline.h  TransparencyPipeline.cpp  TransparencyPipeline.h  WaterPipeline.cpp  WaterPipeline.h
RealMinecraft/Resources/GUI/: gui.json  gui_backup.json
RealMinecraft/Resources/Models/block/: cross.json  cube.json  cube_column.json  dandelion.json  debug_block.json  dirt.json  fluid_temp.json  glass.json  grass_block.json  oak_leaves.json  oak_log.json  poppy.json  sand.json  stone.json  water_temp.json
RealMinecraft/Resources/Shaders/: Glass.frag  Gui.vert  PosColNorm.vert  PosTexNorm.frag  Transparent.frag  Transparent.vert  Water.frag  Water.vert
RealMinecraft/Scenes/: TestScene.cpp
RealMinecraft/Util/: BlockModel.h  BlockParser.cpp  BlockParser.h  ChunkParser.cpp  ChunkParser.h  Enumerations.h  FluidParser.cpp  FluidParser.h  GameInfo.h  GameStructs.h  GameUtils.h  GuiParser.cpp  GuiParser.h  Macros.h  NoiseManager.cpp  NoiseManager.h  SimplexNoise.cpp  SimplexNoise.h  bimap.hpp
